# fnaf-rewrite

./: .gitignore
parser/: .gitignore  main.py  pyproject.toml
parser/baseline/: slice_c_accepted.jsonl
parser/fnaf_parser/: __init__.py  chunk_ids.py  chunk_walker.py  cli.py  compression.py  encryption.py  pe_walker.py  pipeline.py
parser/fnaf_parser/algorithm/: __init__.py  emit.py  expr_str.py  name_resolver.py
parser/fnaf_parser/decoders/: __init__.py  backdrop_body.py  counter_body.py  event_parameters.py  extended_header.py  font_offsets.py  fonts.py  frame.py  header.py  (+18 more)
parser/scripts/: reverify.py  run_step5.sh
parser/tests/: conftest.py  fnaf1_constants.py  test_algorithm_snapshot.py  test_audio_emit.py  test_backdrop_body.py  test_chunk_walker.py  test_cli.py  test_counter_body.py  test_emit.py  test_encryption.py  test_event_parameters.py  test_extended_header.py  test_font_offsets.py  test_fonts.py  test_frame.py  test_frame_events.py  test_frame_fade.py  test_frame_header.py  test_frame_item_instances.py  test_frame_items.py  test_frame_layer_effects.py  test_frame_layers.py  test_frame_palette.py  test_frame_virtual_rect.py  test_header.py  test_image_offsets.py  test_images.py  test_images_pixels.py  test_invariants_citation_checker.py  test_invariants_config.py  test_invariants_handwritten.py  test_invariants_pipeline.py  test_invariants_signatures.py  test_invariants_slices.py  test_literal_gate.py  test_music_absence.py  test_name_resolver.py  test_name_tables.py  test_pe_walker.py  test_png_emit.py  (+6 more)
runtime/: Cargo.toml
runtime/src/: lib.rs
(+36 files in other folders)
