[project]
name = "fnaf-parser"
version = "0.1.0"
description = "FNAF 1 Clickteam data-pack parser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.2.0",
    "duckdb>=1.5.2",
    "pydantic>=2.9.0",
    "pytest>=9.0.3",
    "rich>=15.0.0",
]

# `fnaf-parser` is the human-facing CLI entry point. Three subcommands:
#   fnaf-parser parse <exe>
#   fnaf-parser dump-assets <exe> --out <dir>
#   fnaf-parser dump-algorithm <exe> --out <dir>   (stub until Output Emission)
[project.scripts]
fnaf-parser = "fnaf_parser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fnaf_parser"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
